--- a/html/business.html
+++ b/html/business.html
@@ -39,7 +39,7 @@
                 <a href="news.html">ニュース</a>
               </li>
               <li class="header-wrap__nav__list__item">
-                <a href="#" class="color"><mark>事業内容</mark></a>
+                <a href="#"><mark>事業内容</mark></a>
               </li>
               <li class="header-wrap__nav__list__item">
                 <a href="work.html">施工実績</a>
