--- a/html/work.html
+++ b/html/work.html
@@ -42,7 +42,7 @@
                 <a href="business.html">事業内容</a>
               </li>
               <li class="header-wrap__nav__list__item">
-                <a href="#" class="color"><mark>施工実績</mark></a>
+                <a href="#"><mark>施工実績</mark></a>
               </li>
               <li class="header-wrap__nav__list__item">
                 <a href="company.html">会社情報</a>
