--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <nav class="header-wrap__nav__list">
             <ul class="header-wrap__nav__list__item flex-center">
               <li class="header-wrap__nav__list__item">
-                <a href="#" class="color"><mark>ホーム</mark></a>
+                <a href="#"><mark>ホーム</mark></a>
               </li>
               <li class="header-wrap__nav__list__item">
                 <a href="html/news.html">ニュース</a>
@@ -99,19 +99,19 @@
             </div>
           </div>
           <div class="news-wrap__right">
-            <div class="news-wrap__right__item1">
+            <div class="news-wrap__right__item">
               <p>
                 2022.12.01<br>
                 <span>年末年始休業について</span>
               </p>
             </div>
-            <div class="news-wrap__right__item2">
+            <div class="news-wrap__right__item">
               <p>
                 2022.10.10<br>
                 <span>工事竣工について</span>
               </p>
             </div>
-            <div class="news-wrap__right__item3">
+            <div class="news-wrap__right__item1">
               <p>
                 2022.08.01<br>
                 <span>夏季休業について</span>
