--- a/html/company.html
+++ b/html/company.html
@@ -45,7 +45,7 @@
                 <a href="work.html">施工実績</a>
               </li>
               <li class="header-wrap__nav__list__item">
-                <a href="#" class="color"><mark>会社情報</mark></a>
+                <a href="#"><mark>会社情報</mark></a>
               </li>
               <li class="header-wrap__nav__list__item">
                 <a href="recruit.html">採用情報</a>
