--- a/html/news.html
+++ b/html/news.html
@@ -36,7 +36,7 @@
                 <a href="../index.html">ホーム</a>
               </li>
               <li class="header-wrap__nav__list__item">
-                <a href="#" class="color"><mark>ニュース</mark></a>
+                <a href="#"><mark>ニュース</mark></a>
               </li>
               <li class="header-wrap__nav__list__item">
                 <a href="business.html">事業内容</a>
