--- a/html/recruit.html
+++ b/html/recruit.html
@@ -48,7 +48,7 @@
                 <a href="company.html">会社情報</a>
               </li>
               <li class="header-wrap__nav__list__item">
-                <a href="#" class="color"><mark>採用情報</mark></a>
+                <a href="#"><mark>採用情報</mark></a>
               </li>
             </ul>
           </nav>
